2008-06-09  Andrés G. Aragoneses <aaragoneses@novell.com>

	* atk/Object.custom:
	* atk/glue/object.c:
	Temporary workaround for infinite recursion issue.

2008-06-06  Andrés G. Aragoneses <aaragoneses@novell.com>

	* glib/glue/thread.c: Fix a warning.

2008-06-06  Mike Kestner  <mkestner@novell.com>

	Initial Patch submitted by Christian Hoff with some small
	style alterations and a round trip sample by me.  Supports the 
	registration of managed properties with the GType system, so 
	that things like custom cell renderers can be accessed via the
	native property system from treeview.

	* glib/glue/object.c : property registration related glue.
	* glib/Object.cs: implement managed property registration.
	* glib/PropertyAttribute.cs: add new props and ctor for managed
	property registration.
	* sample/PropertyRegistration.cs: little test app to test round-
	tripping of registered properties.
	* sample/Makefile.am: add new sample.

2008-06-06  Mike Kestner  <mkestner@novell.com>

	* atk/Object.custom: use 'as StateSet' instead of cast to avoid
	cast exceptions in the null case. Apparently it's not an exception
	any more, according to folks on #monodev.  I still prefer as for
	GetObject 'casting'.

2008-06-06  Andres G. Aragoneses <aaragoneses@novell.com> 

	* atk/Object.custom:
	* atk/glue/object.c: Implement virtual method OnRefStateSet().

2008-05-30  Mike Kestner  <mkestner@novell.com>

	* gdk/Pixbuf.custom: don't use the autogenerated PixbufDestroyNative
	delegate type since is has a byte[] parameter that blows up.

2008-05-30  Mike Kestner  <mkestner@novell.com>

	* gtk/Object.custom:
	* gtk/glue/object.c: remove the destroy override.  it doesn't work.

2008-05-28  Mike Kestner  <mkestner@novell.com>

	* gtk/Object.custom: move Dispose call to a vm override so that
	it runs after all signals and native overrides have run.
	* gtk/glue/object.c: destroy override implementation.

2008-05-28  Lluis Sanchez Gual  <lluis@novell.com>
