@@ -1,3 +1,8 @@
+2008-06-16  Mike Kestner  <mkestner@novell.com>
+
+	* glib/glue/object.c: fixes for object, boxed, and gtype
+	property paramspec creation. Patch provided by Christian Hoff.
+
 2008-06-09  Andrés G. Aragoneses <aaragoneses@novell.com>
 
 	* atk/Object.custom:
